src/components/Content/Content.scss
@import "../../styles/variables";
@import "../../styles/mixins";

.content {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 20px;
  max-width: 700px;

  @media screen and (min-width: 425px) {
    gap: 26px;
  }

  &--align-left {
    align-items: flex-start;

    * {
      text-align: left !important;
    }
  }

  &__icon {
    &--yellow {
      svg {
        background-color: $yellow-color;

        path {
          fill: $black-color;
        }
      }
    }

    &--blue {
      svg {
        background-color: $blue-color;

        path {
          fill: $white-color;
        }
      }
    }

    svg {
      border-radius: 50%;
      height: 22px;
      padding: 14px;
      width: 22px;
    }
  }

  &__title {
    @include subtitleSpoofTrailBig;
    text-align: center;

    &--white {
      color: $white-color;
    }

    &--black {
      color: $black-color;
    }
  }

  &__subtitle {
    @include subtitleSpoofTrailSmall;

    &--white {
      color: $white-color;
    }

    &--black {
      color: $black-color;
    }
  }

  &__description {
    @include descriptionSpoofTrail;

    &--white {
      color: $white-color;
    }

    &--black {
      color: $black-color;
    }
  }

  &__buttons {
    align-items: center;
    display: flex;
    justify-content: center;
    gap: 16px;
    flex-wrap: wrap;

    &--white {
      flex-wrap: nowrap;
    }

    > div:nth-of-type(2) .content__button--yellow {
      border: 1px solid $white-color;
      background-color: transparent;
      color: $white-color;
    }
  }

  &__button {
    white-space: nowrap;

    &--yellow {
      @include buttonYellow;
      border: 1px solid $yellow-color;
    }

    &--blue {
      @include buttonBlue;
    }

    &--white {
      @include buttonWhite;
      height: 24px;
      padding: 12px 24px;

      @media screen and (min-width: 425px) {
        padding: 16px 32px;
        height: 48px;
      }

      svg {
        width: 100%;
      }
    }

    &--disabled {
      cursor: auto;
      pointer-events: none;
    }
  }

  &__link {
    align-items: center;
    display: flex;

    &-text {
      color: $black-color;
      font-size: 16px;
      font-family: $font-spoof-trail;
      font-weight: 700;
      line-height: 28px;
      margin: 0 4px 0 0;
      transition: all 150ms $animation-2;

      &--yellow {
        color: $yellow-color;
      }

      &--blue {
        color: $blue-color;
      }
    }

    &-icon {
      align-items: center;
      display: flex;
      justify-content: center;
      transition: all 150ms $animation-2;

      &--yellow {
        svg {
          fill: $yellow-color;
        }
      }

      &--blue {
        svg {
          fill: $blue-color;
        }
      }
    }

    &:hover &-text {
      &--yellow {
        color: $yellow-color-hover;
      }

      &--blue {
        color: $blue-color-hover;
      }
    }

    &:hover &-icon {
      transform: translate(10px, 0);

      &--yellow {
        svg {
          fill: $yellow-color-hover !important;
        }
      }

      &--blue {
        svg {
          fill: $blue-color-hover !important;
        }
      }
    }
  }

  &__content--split.banner__content {
    align-items: flex-start;

    * {
      text-align: left !important;
    }
  }
}

